--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,5 +1,4 @@
 ---
-layout: single
 author: linh_dang
 title: "Trang không tìm thấy!"
 excerpt: "Rất tiếc, trang bạn đang tìm kiếm không còn tồn tại hoặc đã được di chuyển."
@@ -9,6 +8,6 @@ permalink: /404.html
 
 🧘‍♀️😢 Hít một hơi thật sâu… rồi tiếp tục hành trình của bạn nhé:
 
-[Về Yoga cùng Linh Anh](/about/){: .btn .btn-tertiary style="margin:0.5em;padding:0.6em 1.2em;background:#301D10;color:white;border-radius:8px;text-decoration:none;"}
-[Khoá Học](/courses/){: .btn .btn-primary style="margin:0.5em;padding:0.6em 1.2em;background:#301D10;color:white;border-radius:8px;text-decoration:none;"}
-[Liên Hệ](/contact/){: .btn .btn-secondary style="margin:0.5em;padding:0.6em 1.2em;background:#301D10;color:white;border-radius:8px;text-decoration:none;"}
+[Trang Chủ](/){: .btn .btn-tertiary style="margin:0.5em;padding:0.6em 1.2em;background:#301D10;color:white;border-radius:0;text-decoration:none;"}
+[Khoá Học](/khoa-hoc/){: .btn .btn-primary style="margin:0.5em;padding:0.6em 1.2em;background:#301D10;color:white;border-radius:0;text-decoration:none;"}
+[Liên Hệ](/lien-he/){: .btn .btn-secondary style="margin:0.5em;padding:0.6em 1.2em;background:#301D10;color:white;border-radius:0;text-decoration:none;"}
